# The-FAIL-Kit

./: .editorconfig  .eslintrc.json  .gitignore  AUDIT_GUIDE.md  AUDIT_RUNBOOK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_UPGRADE_COMPLETE.md  COMPLETE_ANALYSIS.md  CONTRIBUTING.md  CUSTOM_CASES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  E2E_TEST_RESULTS.md  FAILURE_MODES.md  GAPS_AUDIT.md  IMAGE_OPTIMIZATION.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_APPLIED.md  INSTALL.md  INTEGRATION.md  LANDING_PAGE.md  LANGCHAIN_ADAPTER_BUILD_SUMMARY.md  LICENSE.txt  MIDDLEWARE_TEST_RESULTS.md  PUBLISHING.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_STATUS.md  README.md  RECEIPT_SCHEMA.json  RELEASE_v1.5.0.md  ROADMAP.md  SECURITY.md  STATUS_COMPLETE.md  SYNC_GUIDE.md  TESTING_v1.4.0.md  VERIFICATION_v1.5.1.md  fail-audit.config.json  (+2 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sync-vscode-extension.yml  test-cli.yml
assets/: README.md
audit-results/: audit-2025-12-31T23-05-33-912Z.json  audit-2025-12-31T23-06-02-275Z.json  audit-2025-12-31T23-06-06-170Z.json  audit-2026-01-02T02-54-55-961Z.html  audit-2026-01-02T02-59-33-605Z.html
cases/: ADV_0001_injection_user.yaml  ADV_0002_injection_retrieval.yaml  ADV_0003_sensitive_data_bait.yaml  ADV_0004_policy_bypass.yaml  ADV_0101_injection_with_delimiters.yaml  ADV_0102_injection_roleplay.yaml  ADV_PII_10.yaml  ADV_PII_11.yaml  ADV_REFUSE_101.yaml  ADV_REFUSE_102.yaml  AGENT_0004_action_without_confirm.yaml  AGENT_0007_state_amnesia.yaml  AGENT_0008_phantom_success.yaml  AGENT_0011_wrong_tool_selection.yaml  AGENT_0012_tool_arg_hallucination.yaml  AGENT_0013_cascade_failure.yaml  AGENT_0014_side_effect_blindness.yaml  CONTRACT_0001_output_schema.yaml  CONTRACT_0002_no_secret_leak.yaml  CONTRACT_0003_no_claimed_actions.yaml  CONTRACT_0004_refusal_correctness.yaml  CONTRACT_0005_over_refusal.yaml  CONTRACT_0201_no_fake_file_write.yaml  CONTRACT_0202_no_fake_money_transfer.yaml  CONTRACT_BENIGN_50.yaml  CONTRACT_BENIGN_55.yaml  CONTRACT_BENIGN_60.yaml  CONTRACT_BENIGN_65.yaml  CONTRACT_BENIGN_69.yaml  GROUND_0001_unknown_fact_abstain.yaml  GROUND_0002_missing_sources_abstain.yaml  INDEX.md  RAG_0001_retrieval_poisoning.yaml  RAG_0002_citation_hallucination.yaml  RAG_0003_context_window_overflow.yaml  RAG_0004_recency_bias.yaml  RAG_0005_authority_confusion.yaml  RAG_0006_chunk_boundary_split.yaml  RAG_0007_semantic_drift.yaml  RAG_0008_keyword_gaming.yaml  (+11 more)
cases/extended/: ADV_REFUSE_103.yaml  ADV_REFUSE_104.yaml  ADV_REFUSE_105.yaml  ADV_REFUSE_106.yaml  ADV_REFUSE_107.yaml  ADV_REFUSE_108.yaml  AGENT_0001_tool_loop.yaml  AGENT_0002_goal_hijack.yaml  AGENT_0003_permission_escalation.yaml  AGENT_0005_parallel_race.yaml  AGENT_0006_retry_storm.yaml  AGENT_0009_scope_creep.yaml  AGENT_0010_scope_shrink.yaml  AGENT_0015_undo_impossible.yaml  CONTRACT_BENIGN_51.yaml  CONTRACT_BENIGN_52.yaml  CONTRACT_BENIGN_53.yaml  CONTRACT_BENIGN_54.yaml  CONTRACT_BENIGN_56.yaml  CONTRACT_BENIGN_57.yaml  CONTRACT_BENIGN_58.yaml  CONTRACT_BENIGN_59.yaml  CONTRACT_BENIGN_61.yaml  CONTRACT_BENIGN_62.yaml  CONTRACT_BENIGN_63.yaml  CONTRACT_BENIGN_64.yaml  CONTRACT_BENIGN_66.yaml  CONTRACT_BENIGN_67.yaml  CONTRACT_BENIGN_68.yaml  INVAR_0001_refuse_bomb_paraphrase_a.yaml  INVAR_0002_refuse_bomb_paraphrase_b.yaml  INVAR_0003_refuse_bomb_paraphrase_c.yaml  MM_0001_image_injection.yaml  MM_0002_ocr_hallucination.yaml  MM_0003_visual_context_miss.yaml  MM_0004_audio_transcription_error.yaml  MM_0005_cross_modal_conflict.yaml  MM_0006_chart_misread.yaml  MM_0007_table_structure_fail.yaml  (+84 more)
cases/security/: INDEX.md  (+60 more)
cli/: .npmignore  LICENSE  README.md  package-lock.json  package.json
commercial/: README.md  README_SECTION.md
demos/: README.md  all-passing.tape  phantom-action.tape
docs/: API_REFERENCE.md  CI_CD_GUIDE.md  CLI_CHEATSHEET.md  CLI_REFERENCE.md  EASY_INTEGRATION.md  EXTENDED_RULESET.md  INDEX.md  LANGCHAIN_INTEGRATION.md  LANGCHAIN_QUICK_REFERENCE.md  REPORT_FORMATS.md  SECURITY_TESTING.md  SEVERITY_GUIDE.md  SOURCE_LOCATION.md  STATE_OF_AGENT_SECURITY.md  TECHNICAL_OVERVIEW.md  TROUBLESHOOTING.md  VULNERABILITY_TEMPLATE.md
enforcement/: PRODUCTION_GATES.md  QUICKSTART.md  TRACE_GATES.py  TRACE_GATES.ts  ci-gate-example.yaml  runtime-gate-example.ts
examples/: tools.json
failkit-icons/: Untitled
failkit-icons 2/: README.md
middleware/: README.md  package.json
middleware/fastapi/: README.md  fail_audit.py  fail_gates.py  pyproject.toml
middleware/fastapi/fail_kit/: __init__.py
middleware/langchain/python/: README.md  fail_kit_langchain.py  package.json  pyproject.toml  test_fail_kit_langchain.py
middleware/python-lsp/: .gitignore  README.md  pyproject.toml  requirements.txt
middleware/python-lsp/src/failkit_lsp/: __init__.py  code_actions.py  diagnostics.py  hover.py  server.py
middleware/python-lsp/src/failkit_lsp/analyzer/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  patterns.py
middleware/python-lsp/tests/: __init__.py  test_analyzer.py
public-case-study/: README.md  audit-stats.md  crashcodex-case-study.md
python-lsp/: README.md  pyproject.toml
python-lsp/fail_kit_lsp/: __init__.py  analyzer.py  fixers.py  patterns.py  server.py
receipt-standard/: CONTRIBUTING.md  LICENSE  README.md
receipt-standard/sdk/python/: README.md  pyproject.toml  receipt_standard.py
releases/: RELEASE_v1.4.1.md
rfcs/: README.md  RFC-0001-phantom-completion.md  RFC-0002-hallucinated-tool.md  RFC-0003-confidence-without-evidence.md  RFC-0004-retrieval-gap.md  RFC-0005-silent-failure-cascade.md
scripts/: sync-test-cases.sh
targets/: README.md  anthropic-claude.py  flowise-adapter.py  langchain-agent.py  openai-assistants.py  run-security-audit.sh
templates/: SAMPLE_REPORT.md
vscode-extension/: .eslintrc.js  .vscodeignore  ENHANCEMENT_RECOMMENDATIONS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_WINS.md  README.md  esbuild.config.mjs  package-lock.json  package.json
workflow-drafts/: test-cli.yml
(+191 files in other folders)
