[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fail-kit-fastapi"
version = "2.0.0"
description = "F.A.I.L. Kit - Forensic Audit of Intelligent Logic - FastAPI middleware"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "F.A.I.L. Kit", email = "ali@jakvan.io"}
]
keywords = ["ai", "audit", "testing", "agent", "llm", "fastapi", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.urls]
Homepage = "https://github.com/resetroot99/The-FAIL-Kit"
Documentation = "https://github.com/resetroot99/The-FAIL-Kit/blob/main/docs/EASY_INTEGRATION.md"
Repository = "https://github.com/resetroot99/The-FAIL-Kit"
Issues = "https://github.com/resetroot99/The-FAIL-Kit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fail_kit*"]
